# NER

./: .gitignore  COMANDI.md  README.md  RelazioneTecnica.docx  main.py  pyproject.toml  ~$lazioneTecnica.docx
configs/embeddings/: fasttext_cc_it.yaml  fasttext_wiki_it.yaml  final_nlpl_word2vec_it.yaml  glove_6b_300.yaml  nlpl_word2vec_it.yaml  nlpl_word2vec_it_finetune.yaml  nlpl_word2vec_it_frozen.yaml
configs/experiment/all_datasets/: p0_base.yaml  p1_normalized_embeddings.yaml  p2_no_stopwords_normalized_embeddings.yaml
configs/model/: a0_bilstm_softmax.yaml  a1_bilstm_crf.yaml  a2_charcnn_bilstm_crf.yaml  a2_charcnn_bilstm_crf_nlpl_finetune.yaml  a2_charcnn_bilstm_crf_nlpl_frozen.yaml  charcnn_bilstm_crf.yaml  final_charcnn_bilstm_crf.yaml  final_charcnn_bilstm_crf_char100.yaml  final_charcnn_bilstm_crf_charcnn100.yaml  final_charcnn_bilstm_crf_entity_weighted.yaml  final_charcnn_bilstm_crf_word_dropout_010.yaml
configs/preprocessing/: p0_base.yaml  p1_normalized_embeddings.yaml  p2_no_stopwords_normalized_embeddings.yaml
resources/: stopwords_it.txt
scripts/: download_embeddings.py  final_evaluation.py
src/analysis/: data_analysis.py  embedding_visualization.py
src/data/: datamodule.py  dataset.py
src/evaluation/: metrics.py
src/models/: charcnn_bilstm_crf.py  sequence_tagger.py
src/preprocessing/: embeddings.py  tokens.py
src/scripts/: build_report_figures.py  compare_sampling.py  error_analysis.py  train.py
src/training/: seed.py  trainer.py
src/utils/: config.py  reader.py  vocabulary.py
tests/: test_error_analysis.py  test_metrics.py
(+22 files in other folders)
