[project]
name = "ner2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pytorch-crf>=0.7.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seqeval>=1.2.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
